--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27.htm
@@ -4,51 +4,41 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Resource versions</title>
+<title>Versions</title>
 <meta name="keyword" content="team">
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Resource versions</H1>
-<P CLASS="Para" Label=Type>
-Resources are versioned in order to capture a snapshot of the current state of 
-the resources at one specific point in time.
-When a resource is versioned, it means that a
-non-modifiable copy of it is stored in a repository. </P>
-<P CLASS="Intro">Resources other than projects (that is, files and
-folders) cannot be explicitly versioned.&nbsp; However, these resources are 
-versioned implicitly during synchronization as they are released to the stream. 
-Streams contain the current version of a resource.
-<P CLASS="Intro">Versioning a project saves the line-up of all resource versions in the project. The difference between versioning from the
-workbench or from the
-stream is in deciding which child resource versions should be part of the project version.
-<P CLASS="Para">
-When versioning a project from the <i>workbench</i>, the base versions of the resources in the
-workbench are captured
-as part of the project version.&nbsp; This is the preferred method of versioning a project because you know exactly
-which resource versions will be in the project version.&nbsp;<br>
-<br>
-This operation is allowed if you have outgoing changes or unreleased changes. Unreleased changes
-are simply ignored and resources with outgoing changes can still have their base versions
-be part of the project version.&nbsp; Versioning a project with unreleased or outgoing changes is
-handy if you have to split the project at the point where you started making changes to the resources and release
-the resources to another stream.</P>
-<P CLASS="Para">
-When versioning from the <i>stream</i> you are versioning whatever the latest
-resource versions are in the stream at that moment in time.&nbsp; You should not
-version your projects from the stream if you do not know what is released in the stream. For this reason, versioning from the
-workbench is often preferable.</P>
+<H1 CLASS="Head"> Versions</H1>
+<P CLASS="Para" Label=Type> Resources are versioned in order to capture a snapshot 
+  of the current state of the resources at one specific point in time. Resources 
+  in CVS are versioned by tagging them with a version label. When a resource is 
+  versioned, it means that a non-modifiable copy of it can be retrieved from the 
+  repository. </P>
+<P CLASS="Intro">Versioning a project saves the line-up of all resource versions 
+  in the project. Resources other than projects (that is, files and folders) can 
+  be versioned.&nbsp; However, it is more common to version entire projects together 
+  as the resources contained in a project are often highly interdependant. Projects 
+  can be versioned from the workspace or from the branch in the CVS Repositories 
+  view. The difference between these two approaches is in deciding which child 
+  resource versions should be part of the project version. 
+<P CLASS="Para"> When tagging a project as a version from the <i>workbench</i>, 
+  the base revisions of the files in the workbench are tagged as belonging to 
+  that version.&nbsp; This is the preferred method of versioning a project because 
+  you know exactly which file revisions will be in the version.&nbsp;This operation 
+  is allowed if you have outgoing changes or uncommitted changes. Uncommitted 
+  changes are simply ignored and resources with outgoing changes can still have 
+  their base revisions be part of the version.&nbsp; Versioning a project with 
+  uncommitted or outgoing changes is handy if you have to split the project at 
+  the point where you started making changes to the resources and commit the resources 
+  to another branch.</P>
+<P CLASS="Para"> When tagging a project as a version from a <i>branch</i> in the 
+  CVS Repositories view, you are versioning whatever the latest resource versions 
+  are in the branch at that moment in time.&nbsp; You should not version your 
+  projects from the branch if you do not know what is committed in the branched. 
+  For this reason, versioning from the workbench is often preferable.</P>
 
 
-<P>In the Packages view of the Java perspective or in the Navigator view of the 
-Resource perspective, you can enable the <b>Show Version Info </b>menu item to 
-display the base version of each released file.</P>
-
-
-<p>The local history of a resource is reset when you synchronize.&nbsp; A new 
-history for that resource is created the first time you modify the base version 
-of a resource.&nbsp; Projects do not have a local history.</p>
 <P CLASS="Para">
 <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="concepts-27b.htm"><br>
 </a>
@@ -71,7 +61,6 @@ Versioning projects in the team stream<br>
 Automatic version labeling schema</a><br>
 <a href="../reference/ref-48c.htm">CVS version label syntax rules</a><br>
 </p>
-
 
 <P><br>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
