--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27a.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27a.htm
@@ -4,26 +4,27 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Ignoring Resources from Release</title>
+<title>Ignoring Resources from Version Control</title>
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Ignoring Resources from Release</H1>
-<P CLASS="Para" Label=Type>Often a user may not want to release all resources in their
-project to the repository.&nbsp;
-For example, external editors may create temporary files in your project,&nbsp;compilation of .java files creates .class files, and
-likewise many build operations result in binary files. These files, when taken together, may
-be quite large.&nbsp; In addition, they may be re-generated whenever a build is performed,
-resulting in many&nbsp; outgoing changes.  Typically these are not files that one wants to share with other members of a team or persist in the repository.&nbsp;&nbsp;</P>
-<P CLASS="Para" Label=Type>There are two mechanisms available for specifying which resources
-should not be released to a repository:&nbsp;</P>
-<DIV CLASS="Subtopic">
-<ul>
-  <li>
-Global Ignores</li>
-  <li>CVS Ignore files</li>
-</ul>
-</DIV>
+<H1 CLASS="Head"> Ignoring Resources from Version Control</H1>
+<P CLASS="Para" Label=Type>Often a user may not want to commit all resources in 
+  their project to the repository.&nbsp; For example, external editors may create 
+  temporary files in your project,&nbsp;compilation of .java files creates .class 
+  files, and likewise many build operations result in binary files. These files, 
+  when taken together, may be quite large.&nbsp; In addition, they may be re-generated 
+  whenever a build is performed, resulting in many&nbsp; outgoing changes. Typically 
+  these are not files that one wants to share with other members of a team or 
+  persist in the repository.&nbsp;&nbsp;</P>
+<P CLASS="Para" Label=Type>Eclipse tools will mark there output as being &quot;derived&quot; 
+  resources and repository providers that are integrated with the workbench, such 
+  as CVS, will ignoe these resources. Eclipse also provides a Global Ignore mechanism 
+  for specifying a set of file name patterns which identify resoures which are 
+  to be ignored. Individual repository providers may also have their own mechanism 
+  that work in conjunction with the global ignore list. For instance, CVS has 
+  a facility which allows the user to specify file name patterns for resources 
+  to be ignored in a special file named .cvsignore.</P>
+<DIV CLASS="Subtopic"></DIV>
 <P>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
 
