--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27c.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27c.htm
@@ -8,21 +8,17 @@
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Repositories</H1>
+<H1 CLASS="Head"> Repositories</H1>
 <P CLASS="Intro">
-<P CLASS="Para">
-A repository is a persistent data store that coordinates multi-user access to
-projects and their contents. Projects in a repository can be of two forms:
-immutable (a project version) or modifiable (a project in a stream). Communication between the repository and workbench clients is possible over
-local or wide area networks.&nbsp;&nbsp;</P>
+<P CLASS="Para"> A Concurrent Versions System (CVS) repository is a persistent 
+  data store that coordinates multi-user access to projects and their contents. 
+  Projects in a repository can be of two forms: immutable (a project version) 
+  or modifiable (a project in a branch). Communication between the repository 
+  and workbench clients is possible over local or wide area networks.&nbsp; Currently 
+  the workbench supports two internal authentication protocols for CVS; pserver 
+  and ssh. Authentication protocols provided by external tools can also be used 
+  by CVS.</P>
 <DIV CLASS="Topic">
-<h3>
-CVS </h3>
-<P CLASS="Para">
-Currently, the workbench supports one type of
-repository, the Concurrent Versions System (CVS).&nbsp; Currently the workbench supports
-two authentication protocols; pserver and ssh.</P>
 <P CLASS="Para">
 You can find more information on CVS at <A HREF="http://www.cvshome.org" CLASS="URL">http://www.cvshome.org.</A></P>
 </DIV>
@@ -57,11 +53,9 @@ Setting local history preferences</a>
 Streams in CVS</a>
 </p>
 
-
-<p>
-<img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
 </p>
-
 
 </BODY>
 </HTML>
