--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27v.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27v.htm
@@ -4,31 +4,32 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Repositories view</title>
+<title>CVS Repositories view</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Repositories view</H1>
-<p>The Repositories view, which is part of the Team perspective, shows the repository
-locations that you have added to your workbench.&nbsp;Expanding a location
-reveals the project versions and streams in that repository. You can further expand the
-project versions and streams to reveal the folders and files contained within
-them. </p>
-<p>The pop-up menu for this view also allows you to specify new repository
-locations and add news streams to repositories. Use the Repositories view to add
-resources from the repository to the workbench, edit files in the repository,
-view resource history, and compare resource versions. </p>
+<H1 CLASS="Head"> CVS Repositories view</H1>
+<p>The CVS Repositories view, which is part of the CVS Repository Exploring perspective, 
+  shows the CVS repository locations that you have added to your workbench.&nbsp;Expanding 
+  a location reveals the main trunk (HEAD), project versions and branches in that 
+  repository. You can further expand the project versions and branches to reveal 
+  the folders and files contained within them. </p>
+<p>The pop-up menu for this view also allows you to specify new repository locations. 
+  Use the CVS Repositories view to checkout out resources from the repository 
+  to the workbench, configure the branches and versions shown by the view, view 
+  resource history, and compare resource versions. </p>
 <p CLASS="Para"><img align="texttop" border="0" src="../images/Image242_repo_view.jpg" alt="Picture of the Repositories view, which is a tree view showing 1 repository and the groups of project versions and streams that are under it." ></p>
-<p CLASS="Para">Like other views in the workbench, the Repositories view has its
-own toolbar. Toolbar buttons are provided for refreshing the view and for
-navigating. </p>
+<p CLASS="Para">Like other views in the workbench, the CVS Repositories view has 
+  its own toolbar. Toolbar buttons are provided for refreshing the view and for 
+  navigating. The toolbar also contains a drop down menu that allows the user 
+  to toggle the view to show the folders contained in the repository or modules 
+  defined in the CVSROOT/modules</p>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="concepts-26.htm">Team programming</a> &nbsp;<a href="concepts-27c.htm"><br>
-Repositories</a><a href="concepts-27b.htm"><br>
-Streams</a><a href="concepts-27.htm"><br>
-Resource versions<br>
+  <a href="concepts-26.htm">Team programming with CVS</a>&nbsp;<a href="concepts-27c.htm"><br>
+  CVS Repositories</a><a href="concepts-27b.htm"><br>
+  Branches</a><a href="concepts-27.htm"><br>
+  Versions<br>
 </a><a href="concepts-17a.htm">Local history</a></p>
 
 
