--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-29.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-29.htm
@@ -9,32 +9,28 @@
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
 Three-way comparisons </H1>
-<P CLASS="Para" Label=Type>
-Three-way comparisons show the differences between
-three different resources in the workbench or three versions of a
-resource.&nbsp;This feature is most useful when merging resources or when there
-is a conflict during synchronization.&nbsp;Conflicts occur when two developers add a
-version from the stream to the workbench, then each developer modifies it, then
-one
-developer attempts to release the resource after the other developer has already
-released it.&nbsp; </P>
-<P CLASS="Para" Label=Type>
-When this situation arises,
-you can view the differences between three resource
-versions: the resource in the workbench, the version of the resource that is
-released in the stream, and the <i> common ancestor</i> from which the
-two conflicting versions are based.&nbsp;&nbsp;(If a common ancestor cannot be
-determined, for example because a resource with the same name and path was
-created and released by two different developers, the comparison becomes a
-two-way comparison.) </P>
+<P CLASS="Para" Label=Type> Three-way comparisons show the differences between 
+  three different resources in the workbench or three versions of a resource.&nbsp;This 
+  feature is most useful when merging resources or when there is a conflict during 
+  synchronization.&nbsp;Conflicts occur when two developers add a version from 
+  the same branch to their workbench, then each developer modifies it, then one 
+  developer attempts to commit the resource after the other developer has already 
+  committed it.&nbsp; </P>
+<P CLASS="Para" Label=Type> When this situation arises, you can view the differences 
+  between three resource versions: the resource in the workbench, the version 
+  of the resource that is released in the branch, and the <i> common ancestor</i> 
+  from which the two conflicting versions are based.&nbsp;&nbsp;(If a common ancestor 
+  cannot be determined, for example because a resource with the same name and 
+  path was created and committed by two different developers, the comparison becomes 
+  a two-way comparison.) </P>
 <P CLASS="Para" Label=Type>
 <img align="texttop" border="0" src="../images/Image271_compare3.jpg" alt=" Picture of comparison editor. Top pane compares project structure; second pane from top shows a source file; below that 2 other panes show 2 other source files. Discrepancies are highlighted." > </P>
-<P CLASS="Para" Label=Type>
-The common ancestor is displayed in the top pane of the text compare pane.&nbsp;
-The differences that you  see highlighted are what has  changed in the
-workbench resource as compared to the common ancestor, and what has been changed
-in the stream resource as compared to the common ancestor. The sections that differ in all three files are highlighted as differences.&nbsp;Conflicts are shown in red, incoming changes in gray, and outgoing changes in 
-blue. </P>
+<P CLASS="Para" Label=Type> The common ancestor is displayed in the top pane of 
+  the text compare pane.&nbsp; The differences that you see highlighted are what 
+  has changed in the workbench resource as compared to the common ancestor, and 
+  what has been changed in the branch resource as compared to the common ancestor. 
+  The sections that differ in all three files are highlighted as differences.&nbsp;Conflicts 
+  are shown in red, incoming changes in gray, and outgoing changes in blue. </P>
 
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
