--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-30.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-30.htm
@@ -4,41 +4,37 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Team synchronization</title>
+<title>Synchronizing with a CVS repository</title>
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Team synchronization</H1>
-<P CLASS="Para" Label=Type>
-In the team programming environment, there are two distinct processes involved in
-synchronizing resources: <i>catching up</i> with the stream and <i>releasing</i>
-to the stream.&nbsp;</P>
-<P CLASS="Para" Label=Type>When you make changes in the workbench, the resources are
-saved locally.&nbsp; Eventually you will want to release your changes to
-the stream so others can have access to them.&nbsp; Meanwhile, others may have
-released changes to the steam.&nbsp; You will want to catch up by updating your
-workbench resources with their changes.</P>
-<P CLASS="Para" Label=Type><b>Important</b>: It is preferable to catch up <i> before</i> releasing, in case there
-are conflicts&nbsp; with the resources in your workbench and
-the resources currently in the stream.&nbsp;&nbsp;</P>
-<P>When you select <b>Team &gt; Synchronize with Stream</b> for a resource, the
-Synchronize view opens. You can set filters to control whether you want to
-view only i<i>ncoming changes</i> or <i>outgoing changes</i>. Incoming changes come from the
-stream; if accepted, they will update the workbench resource to the latest version
-currently released into the stream. Outgoing changes come from the workbench; if
-released, they will update the stream resources to the version currently
-present in the workbench.
-</P>
+<H1 CLASS="Head"> Synchronizing with a CVS repository</H1>
+<P CLASS="Para" Label=Type> In the CVS team programming environment, there are 
+  two distinct processes involved in synchronizing resources: <i>updating</i> 
+  with the latest changes from a branch and <i>committing</i> to the branch.&nbsp;</P>
+<P CLASS="Para" Label=Type>When you make changes in the workbench, the resources 
+  are saved locally.&nbsp; Eventually you will want to commit your changes to 
+  the branch so others can have access to them.&nbsp; Meanwhile, others may have 
+  committed changes to the branch.&nbsp; You will want to update your workbench 
+  resources with their changes.</P>
+<P CLASS="Para" Label=Type><b>Important</b>: It is preferable to update <i> before</i> 
+  committing, in case there are conflicts with the resources in your workbench 
+  and the resources currently in the branch.&nbsp;&nbsp;</P>
+<P>When you select <b>Team &gt; Synchronize with Repository</b> for a resource, 
+  the Synchronize view opens. You can set filters to control whether you want 
+  to view only i<i>ncoming changes</i> or <i>outgoing changes</i>. Incoming changes 
+  come from the branch; if accepted, they will update the workbench resource to 
+  the latest version currently committed into the branch. Outgoing changes come 
+  from the workbench; if committed, they will change the branch resources to match 
+  those currently present in the workbench. </P>
 
 
-<P>Regardless of which mode (filter) you select, the Synchronize view always
-shows you conflicts that arise when you have locally modified a resource for which a more
-recent version is available in the stream.&nbsp; In this situation you can
-choose to do one of three things: catch up the resource from the stream, release
-your version of the resource to the stream , or merge your work and the stream
-resource.&nbsp; Typically you will want to merge, as the other two options will
-result in loss of work.
-</P>
+<P>Regardless of which mode (filter) you select, the Synchronize view always shows 
+  you conflicts that arise when you have locally modified a resource for which 
+  a more recent version is available in the branch.&nbsp; In this situation you 
+  can choose to do one of three things: update the resource from the branch, commit 
+  your version of the resource to the branch , or merge your work with the changes 
+  in the branch resource.&nbsp; Typically you will want to merge, as the other 
+  two options will result in loss of work. </P>
 
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
