--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-30b.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-30b.htm
@@ -10,9 +10,9 @@
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
 Synchronize view</H1>
-<P>
-This view allows you to catch up resources in the workbench and release resources
-from the workbench to a stream.&nbsp;Here is what the Synchronize view looks like:</P>
+<P> This view allows you to update resources in the workbench and commit resources 
+  from the workbench to a branch.&nbsp;Here is what the Synchronize view looks 
+  like:</P>
 <P>
 <img align="texttop" border="0" src="../images/Image245_sync_view.jpg" alt=" Picture of 3-paned editor. Top pane compares project structure; bottom 2 panes (side by side) compare lines of source." ></P>
 <h2>
@@ -20,34 +20,34 @@ Modes</h2>
 <P>
 There are three different viewing modes (filters) that you can use in this view to make
 the synchronization process easier:</P>
-<dl>
-  <dt>Catch Up</dt>
-  <dd>In this mode, only resources which have versions
-more recent than the base version of resources in the workbench (incoming
-changes) are visible. If you have incoming changes when you synchronize, you
-    will start
-off in this mode.</dd>
-  <dt>Release</dt>
-  <dd> In this mode, only resources which have been modified in the
-workbench (outgoing changes) are visible.&nbsp;If you do not have incoming
-    changes when you synchronize, you will start in this mode.</dd>
-  <dt>Catch Up/Release</dt>
-  <dd> In this mode both incoming and outgoing changes are shown, and you can
-    both catch up and release. You will remain in this mode with future synchronizations until you
-close the view.&nbsp; The advantage to using this dual mode is you can do either
-task as you choose. The disadvantage is that performing a simultaneous
-    bidirectional merge is often complicated. In addition, you risk accidentally
-releasing a conflict when you meant to catch up to it. You can choose to always use Catch Up/Release mode on the
-workbench preferences page (<b>Workbench &gt; Preferences &gt; Team</b>).</dd>
+<dl> 
+  <dt>Incoming</dt>
+  <dd>In this mode, only resources which have been changed in the repository since 
+    they were last loaded or synchronized with those in the workbench (incoming 
+    changes) are visible. If you have incoming changes when you synchronize, you 
+    will start off in this mode.</dd>
+  <dt>Outgoing</dt>
+  <dd> In this mode, only resources which have been modified in the workbench 
+    (outgoing changes) are visible.&nbsp;If you do not have incoming changes when 
+    you synchronize, you will start in this mode.</dd>
+  <dt>Incoming/Outgoing</dt>
+  <dd> In this mode both incoming and outgoing changes are shown, and you can 
+    both update and commit. You will remain in this mode with future synchronizations 
+    until you close the view.&nbsp; The advantage to using this dual mode is you 
+    can do either task as you choose. The disadvantage is that performing a simultaneous 
+    bidirectional merge is often complicated. In addition, you risk accidentally 
+    committint a conflict when you meant to update to it. You can choose to always 
+    use Incoming/Outgoing mode on the workbench preferences page (<b>Window&gt; 
+    Preferences &gt; CVS</b>).</dd>
 </dl>
 <P>
 Modes not only filter the set of visible changes but also restrict the set of operations
 available. They support and encourage the ideal
     work flow. You can switch modes using the toolbar of the Synchronization
 view.&nbsp;</P>
-<P>
-<b>Important</b>: It is preferable to catch up resources in the workbench first, resolve any
-conflicts that exist by merging, then release workbench resources to the stream.</P>
+<P> <b>Important</b>: It is preferable to update resources in the workbench first, 
+  resolve any conflicts that exist by merging, then commit workbench resources 
+  to the repository.</P>
 <P>
 Regardless of the mode that you select, you will always see any conflicts that
 exist. You can filter out other outgoing and incoming changes by clicking the <b> Show Only Conflicts</b>
@@ -55,9 +55,8 @@ button.</P>
 
 <h2>
 Structure Compare Pane</h2>
-<P>
-This pane allows you to view a hierarchy tree of all
-the resource differences between the stream and the workbench.</P>
+<P> This pane allows you to view a hierarchy tree of all the resource differences 
+  between the repository and the workbench.</P>
 
 <h2>
 Text Compare Pane</h2>
@@ -86,8 +85,7 @@ Releasing resources to the stream</a><a href="../tasks/tasks-68.htm"><br>
 </p>
 
 
-<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
-
+<p><img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
 </P>
 
 
