--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27b.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27b.htm
@@ -4,44 +4,41 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Streams</title>
+<title>Branches</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1>Streams</H1>
+<H1>Branches</H1>
 
-<p>Teams share and integrate their ongoing work in <i>streams</i>.&nbsp;Think of a stream as a shared work area that can be updated
-at any time by team members.&nbsp; In this way, individuals can work on a team
-project, share their work with others on the team, and access the work of others
-during all stages of the project.&nbsp; The stream effectively represents the
-current shared state of the project.&nbsp;&nbsp;
+<p>In CVS, Teams share and integrate their ongoing work in <i>branches</i>.&nbsp;Think 
+  of a banch as a shared work area that can be updated at any time by team members.&nbsp; 
+  In this way, individuals can work on a team project, share their work with others 
+  on the team, and access the work of others during all stages of the project.&nbsp; 
+  The branch effectively represents the current shared state of the project.&nbsp;&nbsp; 
 </p>
-<p>Resources can be changed in the workbench without affecting the
-stream.&nbsp; Individuals must explicitly provide their changed resources to the
-stream.&nbsp;&nbsp;
+<p>Resources can be changed in the workbench without affecting the branch.&nbsp; 
+  Individuals must explicitly provide their changed resources to the branch.&nbsp;&nbsp; 
 </p>
-<p>Every repository has at least one stream.&nbsp; Under certain
-conditions, more than one stream may exist in a repository.&nbsp; For
-example, one stream may be for ongoing work, and another stream may be for maintenance
-work.&nbsp;
+<p>Every CVS repository has at least one branch, refered to as HEAD.&nbsp; Under 
+  certain conditions, more than one branch may exist in a repository.&nbsp; For 
+  example, one branch may be for ongoing work, and another branch may be for maintenance 
+  work.&nbsp; </p>
+<p>As you make changes locally in your workbench, you are working isolated from 
+  the rest of the team. When you are ready to make your local resource changes 
+  available to other team members, you'll need to <i> commit</i> your work to 
+  the branch. All such changes are termed as outgoing changes when you do a synchronization. 
 </p>
-<p>As you make changes locally in your workbench, you are working
-isolated from the rest of the team. When you are ready to make your local
-resource changes available to other team members, you'll need to <i> release</i> your
-work to the stream. All such changes are termed as outgoing changes when you do
-a synchronization.
-</p>
-  <p>Ideally, you should catch
-  up to a stream before releasing to it. This ensures that you have the very
-  latest work from the other team members. After you have caught up with the
-  stream, merged any conflicting changes in your local workbench, and tested
-  your changes locally, you can more easily release your workbench's changes to
-  the stream.</p>
+  
+<p>Ideally, you should update your local workspace with any changes others have 
+  made in a branch before committing to it. This ensures that you have the very 
+  latest work from the other team members. After you have updated from the branch, 
+  merged any conflicting changes in your local workbench, and tested your changes 
+  locally, you can more easily commit your workbench's changes to the branch.</p>
 
-  <p>When you release changes to the stream, your changes are
-  copied from your local workbench to the stream. As a result, these changes are
-  then seen as incoming changes when other developers catch up to the stream
-  later.</p>
+  
+<p>When you commit changes to the branch, your changes are copied from your local 
+  workbench to the branch. As a result, these changes are then seen as incoming 
+  changes when other developers update from the branch later.</p>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="concepts-26.htm">Team programming</a> &nbsp;<a href="concepts-27c.htm"><br>
@@ -77,7 +74,6 @@ Streams in CVS</a>
 <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
 
 </p>
-
 
 </BODY>
 </HTML>
